Adicionado Validation service para verificar se o formulario esta valido antes de realizar envio para o servidor, criado view model de funcionarios

--- a/TaxingArchitecture/Tax.UserInterface/src/app/view/home/home.component.html
+++ b/TaxingArchitecture/Tax.UserInterface/src/app/view/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="content-header"></section>
 <section class="content">
   <section class="invoice">
-    <form>
+    <form id="formulario" #formulario="ngForm" ngNativeValidate (ngSubmit)="salvar()">
       <div class="row">
         <div class="col-xs-12">
         </div>
@@ -13,29 +13,29 @@
         <div class="col-sm-4 col-xs-8">
           <div class="form-group">
             <label class="control-label required" for="nome"> Nome</label>
-            <input type="text" class="form-control" id="nome" placeholder="Insira o nome do funcionário">
+            <input type="text" class="form-control" id="nome" name="nome" placeholder="Insira o nome do funcionário" [(ngModel)]="model.nome" required>
             <span class="help-block"></span>
           </div>
         </div>
         <div class="col-sm-4 col-xs-8">
           <div class="form-group">
             <label class="control-label required" for="email"> E-mail</label>
-            <input type="text" class="form-control" id="email" placeholder="Insira o e-mail" required>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Insira o e-mail" [(ngModel)]="model.email" required>
           </div>
         </div>
         <div class="col-sm-4 col-xs-6">
           <div class="form-group">
             <label class="control-label required" for="salario"> Salário</label>
-            <input type="text" class="form-control" id="salario" placeholder="Insira o salário">
+            <input type="text" class="form-control" id="salario" name="salario" placeholder="Insira o salário" [(ngModel)]="model.salarioBruto" required>
           </div>
         </div>
       </div>
     </form>
     <div class="row">
       <div class="col-xs-12">
-        <a href="#" class="btn btn-success pull-right">
+        <button type="submit" class="btn btn-success pull-right" (click)="formulario.onSubmit()" [disabled]="formulario.form.invalid">
           <i class="fa fa-check"></i> Consultar
-        </a>
+        </button>
       </div>
     </div>
   </section>
