Criado controller para acesso a consulta de dados do funcionario e implementada chamada para esta API

--- a/TaxingArchitecture/Tax.UserInterface/src/app/view/home/home.component.html
+++ b/TaxingArchitecture/Tax.UserInterface/src/app/view/home/home.component.html
@@ -1,7 +1,7 @@
 <section class="content-header"></section>
 <section class="content">
   <section class="invoice">
-    <form id="formulario" #formulario="ngForm" ngNativeValidate (ngSubmit)="salvar()">
+    <form id="formulario" #formulario="ngForm" ngNativeValidate (ngSubmit)="consultar()">
       <div class="row">
         <div class="col-xs-12">
         </div>
